chris rules yaml file for apis
